--- a/package.json
+++ b/package.json
@@ -1,5 +1,30 @@
 {
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2"
-  }
+  },
+  "name": "class",
+  "version": "1.0.0",
+  "main": "app.js",
+  "directories": {
+    "test": "test"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/JeongTaekCho/NodeJS-Class.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/JeongTaekCho/NodeJS-Class/issues"
+  },
+  "homepage": "https://github.com/JeongTaekCho/NodeJS-Class#readme",
+  "description": ""
 }
